--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  
+}
+
+.App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .products-container {
@@ -9,6 +23,7 @@
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(6, 1fr);
+  overflow: scroll;
 
 }
 
