--- a/src/components/Filter/FilterBar.module.scss
+++ b/src/components/Filter/FilterBar.module.scss
@@ -4,6 +4,15 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
   padding: 1rem;
+}
+
+@media only screen and (width < 896px) {
+  .container {
+    height: 10rem;
+    flex-shrink: 0;
+    overflow: scroll;
+  }
 }
